--- a/client/sass/field.scss
+++ b/client/sass/field.scss
@@ -9,6 +9,10 @@
   .cell {
     width: 50px;
     height: 50px;
-    box-shadow: inset 0 0 0 1px #00000005
+    box-shadow: inset 0 0 0 1px #00000005;
+
+    &.filled {
+      background-color: #3e3634;
+    }
   }
 }
