--- a/client/sass/field.scss
+++ b/client/sass/field.scss
@@ -2,13 +2,18 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 500px;
-  height: 1000px;
+
+  width: 30vw;
+  height: 60vw;
+  max-width: 500px;
+  max-height: 1000px;
   box-shadow: inset 0 0 0 1px black;
 
   .cell {
-    width: 50px;
-    height: 50px;
+    width: 3vw;
+    height: 3vw;
+    max-width: 50px;
+    max-height: 50px;
     box-shadow: inset 0 0 0 1px #00000005;
 
     &.filled-for-type-I {
