--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -2,54 +2,45 @@
 @import "global";
 @import "field";
 
-body
-{
+body {
   font-family: "Courier New";
 }
 
-.form__nickname
-{
+.form__nickname {
   width: 400px;
 }
 
-.dashboard__btn
-{
+.dashboard__btn {
   width: 250px;
   margin: 15px;
 }
 
-.nickname__input
-{
+.nickname__input {
   width: 300px;
 }
 
-.dasboard__menu
-{
+.dasboard__menu {
   padding-top: 50px;
 }
 
-.input__label
-{
+.input__label {
   font-weight: 900;
   text-transform: uppercase;
 }
 
 @media (max-width: 600px) {
-  .dashboard__btn
-  {
+  .dashboard__btn {
     width: auto;
   }
 }
 
-.room-management__container
-{
+.room-management__container {
   height: 100%;
   position: fixed;
   right: 0;
 }
 
-.room__management
-{
+.room__management {
   padding: 15px 43px;
   width: 250px;
   height: 100%;
@@ -59,14 +50,12 @@ body
   display: flex;
 }
 
-.game__container
-{
+.game__container {
   height: 100vh;
   flex: 0 1 calc(100% - 250px);
 }
 
-.game__field
-{
+.game__field {
   min-width: 400px;
   min-height: 800px;
   width: 400px;
@@ -74,11 +63,11 @@ body
   border: 2px solid black;
 }
 
-.game__link
-{
+.game__link {
   display: flex;
   justify-content: center;
   align-items: center;
+
   span {
     background: #fff;
     border: 3px solid black;
@@ -87,16 +76,29 @@ body
   }
 }
 
-.enemy__field
-{
-  background: #71b9b7;
-  width: 160px;
-  height: 320px;
+.future-block {
+  background: #f9f9f9;
+  width: 180px;
+  height: 180px;
+
+  .field {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 180px;
+    height: 180px;
+    box-shadow: inset 0 0 0 1px #dedede;
+
+    .cell {
+      width: 30px;
+      height: 30px;
+    }
+  }
 }
 
-.room-management__btns
-{
+.room-management__btns {
   text-align: center;
+
   button {
     margin: 0 0 15px 0;
   }
