--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,7 +1,3 @@
-@import "variables";
-@import "global";
-@import "field";
-
 body {
   font-family: "Courier New";
 }
@@ -10,28 +6,41 @@ body {
   width: 400px;
 }
 
+.form-nickname__group
+{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  input[type="submit"]
+  {
+    width: 150px;
+    margin-top: 10px;
+  }
+}
+
+.d-flex-col
+{
+  display: flex;
+  flex-direction: column;
+}
+
 .dashboard__btn {
   width: 250px;
   margin: 15px;
 }
 
 .nickname__input {
-  width: 300px;
+  width: 200px;
 }
 
-.dasboard__menu {
-  padding-top: 50px;
+.dashboard__menu {
+  margin-top: 50px;
 }
 
 .input__label {
   font-weight: 900;
   text-transform: uppercase;
-}
-
-@media (max-width: 600px) {
-  .dashboard__btn {
-    width: auto;
-  }
 }
 
 .room-management__container {
@@ -48,11 +57,6 @@ body {
   justify-content: space-between;
   flex-direction: column;
   display: flex;
-}
-
-.game__container {
-  height: 100vh;
-  flex: 0 1 calc(100% - 250px);
 }
 
 .game__field {
@@ -76,30 +80,313 @@ body {
   }
 }
 
-.future-block {
-  background: #f9f9f9;
-  width: 180px;
-  height: 180px;
+button {
+  font-weight: 900;
+}
 
+.container {
+  width: 100%;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex_centered {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.row {
+  .col-6 {
+    flex: 1 0 50%;
+  }
+
+  .col {
+    flex: 0 1 100%;
+  }
+}
+
+.centered {
+  text-align: center;
+}
+
+.left {
+  text-align: left;
+}
+
+.right {
+  text-align: right;
+}
+
+.label {
+  font-weight: 900;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
+
+.future-block {
+    display: flex;
+    justify-content: center;
   .field {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 180px;
-    height: 180px;
+    width: 120px;
+    height: 120px;
     box-shadow: inset 0 0 0 1px #dedede;
 
     .cell {
-      width: 30px;
-      height: 30px;
+      width: 20px;
+      height: 20px;
     }
   }
 }
 
 .room-management__btns {
   text-align: center;
+}
 
-  button {
-    margin: 0 0 15px 0;
+.field {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+  width: 30vw;
+  height: 60vw;
+  max-width: 500px;
+  max-height: 1000px;
+  box-shadow: inset 0 0 0 1px black;
+
+  .cell {
+    width: 3vw;
+    height: 3vw;
+    max-width: 50px;
+    max-height: 50px;
+    box-shadow: inset 0 0 0 1px #00000005;
+
+    &.filled-for-type-I {
+      background: rgba(80, 227, 230, 0.8);
+      border-bottom-color: rgba(80, 227, 230, 0.1);
+      border-right-color: rgba(80, 227, 230, 1);
+      border-top-color: rgba(80, 227, 230, 1);
+      border-left-color: rgba(80, 227, 230, 0.3);
+    }
+
+    &.filled-for-type-O {
+      background: rgba(223, 217, 36, 0.8);
+      border-bottom-color: rgba(223, 217, 36, 0.1);
+      border-right-color: rgba(223, 217, 36, 1);
+      border-top-color: rgba(223, 217, 36, 1);
+      border-left-color: rgba(223, 217, 36, 0.3);
+    }
+
+    &.filled-for-type-T {
+      background: rgba(132, 61, 198, 0.8);
+      border-bottom-color: rgba(132, 61, 198, 0.1);
+      border-right-color: rgba(132, 61, 198, 1);
+      border-top-color: rgba(132, 61, 198, 1);
+      border-left-color: rgba(132, 61, 198, 0.3);
+    }
+
+    &.filled-for-type-J {
+      background: rgba(36, 95, 223, 0.8);
+      border-bottom-color: rgba(36, 95, 223, 0.1);
+      border-right-color: rgba(36, 95, 223, 1);
+      border-top-color: rgba(36, 95, 223, 1);
+      border-left-color: rgba(36, 95, 223, 0.3);
+    }
+
+    &.filled-for-type-L {
+      background: rgba(223, 173, 36, 0.8);
+      border-bottom-color: rgba(223, 173, 36, 0.1);
+      border-right-color: rgba(223, 173, 36, 1);
+      border-top-color: rgba(223, 173, 36, 1);
+      border-left-color: rgba(223, 173, 36, 0.3);
+    }
+
+    &.filled-for-type-S {
+      background: rgba(48, 211, 56, 0.8);
+      border-bottom-color: rgba(48, 211, 56, 0.1);
+      border-right-color: rgba(48, 211, 56, 1);
+      border-top-color: rgba(48, 211, 56, 1);
+      border-left-color: rgba(48, 211, 56, 0.3);
+    }
+
+    &.filled-for-type-Z {
+      background: rgba(227, 78, 78, 0.8);
+      border-bottom-color: rgba(227, 78, 78, 0.1);
+      border-right-color: rgba(227, 78, 78, 1);
+      border-top-color: rgba(227, 78, 78, 1);
+      border-left-color: rgba(227, 78, 78, 0.3);
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .game__container
+  {
+    height: calc(100vh - 150px);
+    order: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+  }
+
+  .room-management__container
+  {
+    display: flex;
+    order: 2;
+    width: 100%;
+  }
+  .room__management
+  {
+    position: absolute;
+    bottom: 0;
+    padding: 10px 15px;
+    width: 100%;
+    height: 150px;
+    background: #eceded;
+    justify-content: space-between;
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    label {
+      font-size: 13px;
+    }
+  }
+  .game__link
+  {
+    span {
+      padding: 8px 10px;
+      width: 80px;
+      font-size: 10px;
+    }
+  }
+  .invite-cpy__btn
+  {
+    width: 40px;
+    height: 40px;
+    font-size: 14px;
+  }
+  .future-block
+  {
+    .field
+    {
+      width: 60px;
+      height: 60px;
+      .cell
+      {
+        width: 10px;
+        height: 10px;
+      }
+    }
+  }
+  .room-management__btns
+  {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+  }
+  .game-field__wrap
+  {
+    height: 100%;
+    padding: 10px;
+  }
+}
+
+@media (min-width: 992px) {
+  .game__container {
+    height: 100vh;
+    flex: 0 1 calc(100% - 250px);
+  }
+}
+
+@media (max-width: 576px) {
+  .game__container
+  {
+    height: calc(100vh - 80px);
+  }
+  .room__management
+  {
+    height: 80px;
+  }
+  .game-link__label
+  {
+    display: none;
+  }
+  .field
+  {
+    width: 40vw;
+    height: 80vw;
+    .cell {
+      width: 4vw;
+      height: 4vw;
+    }
+  }
+  .room-management__btns
+  {
+    button
+    {
+      width: 70px;
+      margin: 0;
+      padding: 0;
+      font-size: 10px;
+    }
+  }
+}
+
+.game-field__area
+{
+  width: 90%;
+}
+
+.game-field__body
+{
+  display: flex;
+  justify-content: space-between;
+}
+
+.test
+{
+  background-color: #eceded;
+  width: 15vw;
+  height: 30vw;
+}
+
+.game-stats__btns
+{
+  display: flex;
+  flex-direction: column;
+}
+
+.game-stats__btn
+{
+
+  span {
+    text-transform: uppercase;
+    font-weight: 900;
+  }
+}
+
+.room-management__btns
+{
+  button:first-child
+  {
+    margin-bottom: 12px;
   }
 }
