--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -372,3 +372,33 @@ button {
 .field__border {
   border: 3px solid #000;
 }
+
+.game__players
+{
+  margin-top: 30px;
+  display: inline-block;
+}
+
+.game-link__wrap
+{
+  display: inline-block;
+}
+
+.game-players__title
+{
+  margin-bottom: 10px;
+}
+
+@media (max-width: 992px)
+{
+  .game__players
+  {
+    margin-top: 0;
+    margin-left: 30px;
+  }
+  .game-players__title
+  {
+    margin-bottom: 0;
+    display: none;
+  }
+}
