Added music component. Revamped space handling.

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -437,3 +437,23 @@ button {
     }
   }
 }
+
+.dashboard-actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  width: 100%;
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+}
+
+.music {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+
+  button {
+    cursor: pointer !important;
+  }
+}
