--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -59,9 +59,9 @@ body {
 
 .game__field {
   min-width: 400px;
-  min-height: 800px;
+  //min-height: 800px;
   width: 400px;
-  height: 800px;
+  //height: 800px;
   border: 2px solid black;
 }
 
@@ -164,9 +164,9 @@ button {
   flex-wrap: wrap;
 
   width: 30vw;
-  height: 60vw;
+  //height: 60vw;
   max-width: 500px;
-  max-height: 1000px;
+  //max-height: 1000px;
   box-shadow: inset 0 0 0 1px black;
 
   .cell {
@@ -320,7 +320,7 @@ button {
   }
   .field {
     width: 40vw;
-    height: 80vw;
+    //height: 80vw;
 
     .cell {
       width: 4vw;
@@ -344,12 +344,7 @@ button {
 .game-field__body {
   display: flex;
   justify-content: space-between;
-}
-
-.test {
-  background-color: #eceded;
-  width: 15vw;
-  height: 30vw;
+  align-items: start;
 }
 
 .game-stats__btns {
@@ -374,38 +369,31 @@ button {
   border: 3px solid #000;
 }
 
-.game__players
-{
+.game__players {
   margin-top: 30px;
   display: inline-block;
 }
 
-.game-link__wrap
-{
+.game-link__wrap {
   display: inline-block;
 }
 
-.game-players__title
-{
+.game-players__title {
   margin-bottom: 10px;
 }
 
-@media (max-width: 992px)
-{
-  .game__players
-  {
+@media (max-width: 992px) {
+  .game__players {
     margin-top: 0;
     margin-left: 30px;
   }
-  .game-players__title
-  {
+  .game-players__title {
     margin-bottom: 0;
     display: none;
   }
 }
 
-.form__error
-{
+.form__error {
   color: red;
   font-weight: 900;
 }
@@ -421,9 +409,9 @@ button {
         flex-wrap: wrap;
 
         width: 20vw;
-        height: 40vw;
+        //height: 40vw;
         max-width: 300px;
-        max-height: 600px;
+        //max-height: 600px;
         box-shadow: inset 0 0 0 1px black;
 
         .cell {
@@ -458,28 +446,23 @@ button {
   }
 }
 
-.score__container
-{
+.score__container {
   margin: 0 10vw;
 }
 
-@media (max-width: 786px)
-{
-  .score__container
-  {
+@media (max-width: 786px) {
+  .score__container {
     margin: 0 30px;
   }
 }
 
-.score__table-wrap
-{
+.score__table-wrap {
   padding-top: 50px;
   display: flex;
   justify-content: center;
 }
 
-.score__head
-{
+.score__head {
   font-size: 24px;
   font-weight: 900;
   display: flex;
@@ -489,66 +472,54 @@ button {
 }
 
 
-@media (max-width: 786px)
-{
-  .score__head
-  {
+@media (max-width: 786px) {
+  .score__head {
     font-size: 16px;
   }
 }
 
-@media (max-width: 968px)
-{
+@media (max-width: 968px) {
   .score__head {
     font-size: 18px;
   }
 }
 
-.score__table
-{
+.score__table {
   width: 100%;
   background: #eceded;
   border-radius: 15px;
 }
 
-.score__row
-{
+.score__row {
   display: flex;
   justify-content: space-between;
   padding: 15px 30px;
 }
 
-.score-table__head
-{
+.score-table__head {
   font-weight: 900;
 }
 
-.score__table
-{
-  .score__row:not(:first-child)
-  {
+.score__table {
+  .score__row:not(:first-child) {
     border-top: 1px solid #808080;
   }
 }
 
-.paginator
-{
+.paginator {
   padding-top: 50px;
   display: flex;
   justify-content: center;
 }
 
-.paginator__row
-{
+.paginator__row {
   display: flex;
   min-width: 300px;
   justify-content: space-around;
 }
 
-.paginator__row
-{
-  .pagination__page-btn:not(:last-child)
-  {
+.paginator__row {
+  .pagination__page-btn:not(:last-child) {
     margin-right: 15px;
   }
 }
