Bug after field shrinks.

--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -507,6 +507,12 @@ button {
   }
 }
 
+.score-table {
+  width: -moz-available;          /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+  width: fill-available;
+}
+
 .paginator {
   padding-top: 50px;
   display: flex;
