--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -1,3 +1,5 @@
+@import "_loader.scss";
+
 body {
   font-family: "Courier New";
 }
@@ -544,4 +546,44 @@ button {
     align-items: center;
     margin-left: 10px;
   }
+}
+
+.application__actions
+{
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.bottom__menu
+{
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.not-found__msg
+{
+  text-align: center;
+  span {
+    font-size: 18px;
+    font-weight: bold;
+  }
+}
+
+.not-found__section
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30% 5vw 0 5vw;
+  flex-direction: column;
+}
+
+.not-found__head {
+  margin-bottom: 15px;
+}
+
+.paginator div {
+  margin: 0 9px;
 }
