--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -43,14 +43,8 @@ body {
   text-transform: uppercase;
 }
 
-.room-management__container {
-  height: 100%;
-  position: fixed;
-  right: 0;
-}
-
 .room__management {
-  padding: 15px 43px;
+  padding: 42px 42px;
   width: 250px;
   height: 100%;
   background: #eceded;
@@ -61,9 +55,7 @@ body {
 
 .game__field {
   min-width: 400px;
-  //min-height: 800px;
   width: 400px;
-  //height: 800px;
   border: 2px solid black;
 }
 
@@ -236,6 +228,18 @@ button {
   }
 }
 
+@media (max-height: 900px) and (min-width: 1280px) {
+  .field {
+    width: 45vh;
+    height: 90vh;
+
+    .cell {
+      width: 4.5vh;
+      height: 4.5vh;
+    }
+  }
+}
+
 @media (max-width: 992px) {
   .game__container {
     height: calc(100vh - 150px);
@@ -322,7 +326,6 @@ button {
   }
   .field {
     width: 40vw;
-    //height: 80vw;
 
     .cell {
       width: 4vw;
@@ -350,6 +353,7 @@ button {
 }
 
 .game-stats__btns {
+  padding: 10vh 0;
   display: flex;
   flex-direction: column;
 }
@@ -412,6 +416,7 @@ button {
         flex-wrap: wrap;
 
         width: 20vw;
+        height: unset;
         //height: 40vw;
         max-width: 300px;
         //max-height: 600px;
@@ -504,8 +509,8 @@ button {
 }
 
 .score-table {
-  width: -moz-available;          /* WebKit-based browsers will ignore this. */
-  width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
+  width: -moz-available; /* WebKit-based browsers will ignore this. */
+  width: -webkit-fill-available; /* Mozilla-based browsers will ignore this. */
   width: fill-available;
 }
 
@@ -542,31 +547,28 @@ button {
   }
 }
 
-.application__actions
-{
+.application__actions {
   position: absolute;
   top: 20px;
   left: 20px;
 }
 
-.bottom__menu
-{
+.bottom__menu {
   display: flex;
   justify-content: center;
   margin-top: 30px;
 }
 
-.not-found__msg
-{
+.not-found__msg {
   text-align: center;
+
   span {
     font-size: 18px;
     font-weight: bold;
   }
 }
 
-.not-found__section
-{
+.not-found__section {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -582,7 +584,6 @@ button {
   margin: 0 9px;
 }
 
-.room-dialog__btns
-{
+.room-dialog__btns {
   text-align: center;
 }
